--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Digital Chat</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h2>💬 Digital Chat</h2>
+  </header>
+
+  <main>
+    <section class="cards">
+      <div class="card">
+        <h3>ازاي اقدر اساعدك</h3>
+        <p>اتفضل ازاي اقدر اساعد حضرتك يا فندم؟ في خدمة حضرتك دايمًا.</p>
+      </div>
+      <div class="card">
+        <h3>Greeting Without Number</h3>
+        <p>اهلا بحضرتك، اتمنى لك يوم سعيد 😊 ممكن توضح الرقم اللي عليه الاستفسار من فضلك؟</p>
+      </div>
+      <div class="card">
+        <h3>Show Empathy</h3>
+        <p>في البداية انا حابب اعتذر لحضرتك جدًا عن وجود أي مشكلة...</p>
+      </div>
+    </section>
+
+    <aside class="menu">
+      <input type="text" placeholder="search here...">
+      <ul>
+        <li>Chatting & Idle</li>
+        <li>Sales DSL</li>
+        <li>Tech DSL</li>
+        <li>GSM Prepaid</li>
+        <li>GSM PostPaid</li>
+        <li>Landline</li>
+      </ul>
+    </aside>
+  </main>
+
+  <footer>
+    <p>Designed & Developed by Geek © 2025 - Version 2.0.0</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
 
